--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -33,20 +33,20 @@
                         <form class="user" th:action="@{/process_register}" method="post" th:object="${user}">
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input class="form-control form-control-user" type="text" th:field="*{firstName}" placeholder="First Name" name="first_name">
+                                    <input class="form-control form-control-user" type="text" th:field="*{firstName}" required placeholder="First Name" name="first_name">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input class="form-control form-control-user" type="text" th:field="*{lastName}" placeholder="Last Name" name="last_name">
+                                    <input class="form-control form-control-user" type="text" th:field="*{lastName}" required placeholder="Last Name" name="last_name">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input class="form-control form-control-user" type="email" th:field="*{email}" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                                <input class="form-control form-control-user" type="email" th:field="*{email}" required aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input class="form-control form-control-user" type="password" th:field="*{password}" placeholder="Password" name="password">
+                                    <input class="form-control form-control-user" type="password" th:field="*{password}" required placeholder="Password" name="password">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input class="form-control form-control-user" type="password" placeholder="Repeat Password" name="password_repeat">
+                                    <input class="form-control form-control-user" type="password" required placeholder="Repeat Password" name="password_repeat">
                                 </div>
                             </div>
                             <button class="btn btn-primary btn-block text-white btn-user" type="submit" style="background: var(--purple);">Register Account</button>
