--- a/src/main/resources/templates/customer_superfrogtable.html
+++ b/src/main/resources/templates/customer_superfrogtable.html
@@ -70,10 +70,8 @@
                                     <span class="d-none d-lg-inline mr-2 text-gray-600 small" th:text="${user.getFirstName() + ' ' + user.getLastName()}"></span>
                                     <img class="border rounded-circle img-profile" src="/img/profilepicture.png"></a>
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
-                                    <a class="dropdown-item" href="profile.html">
-                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a>
+                                    <a class="dropdown-item" th:href="@{/profile}">
+                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile</a>
 
                                     <div class="dropdown-divider"></div>
                                     <form method="post" th:action="@{/logout}">
