--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -105,6 +105,12 @@
                                                         <input type="email" class="form-control" id="email" th:value="${user.getUsername()}" name="email" />
                                                     </div>
                                                 </div>
+                                                <div class="col">
+                                                    <div class="form-group"><label for="tel">
+                                                        <strong>Email Address</strong></label>
+                                                        <input type="email" class="form-control" id="tel" th:value="${user.getPhoneNumber()}" name="tel" />
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="form-row">
                                                 <div class="col">
