--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -39,8 +39,14 @@
                                     <input class="form-control form-control-user" type="text" th:field="*{lastName}" required placeholder="Last Name" name="last_name">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <input class="form-control form-control-user" type="email" th:field="*{email}" required aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
+                            <div class="form-group row">
+                                <div class="col-sm-6 mb-3 mb-sm-0">
+                                    <input class="form-control form-control-user" type="email" th:field="*{email}" required aria-describedby="emailHelp" placeholder="Email Address" name="email">
+                                </div>
+                                <div class="col-sm-6">
+                                    <input class="form-control form-control-user" type="tel" th:field="*{phoneNumber}" required  placeholder="Phone Number" name="tel">
+                                </div>
+                            </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
                                     <input class="form-control form-control-user" type="password" th:field="*{password}" required placeholder="Password" name="password">
